# cyber-sentinels

./: .gitignore  ARCHITECTURE.md  DEMO_STORY.md  README.md  SCENARIOS.md  demo.py  pyproject.toml  requirements.txt  run_continuous.py
agent/: agent.py  graph.py  prompts.py  tools.py
notebooks/: cyber_ignition_agents_playground.ipynb
sensor/: monitor.py
src/cyber_ignition_agents/: __init__.py  cli.py
src/cyber_ignition_agents/agent/: graph.py  tools.py
src/cyber_ignition_agents/sensor/: monitor.py  orchestrator.py
src/cyber_ignition_agents/simulation/: malicious.py  normal.py
src/cyber_sentinels/: __init__.py  cli.py
src/cyber_sentinels/agent/: graph.py  tools.py
src/cyber_sentinels/sensor/: monitor.py  orchestrator.py
src/cyber_sentinels/simulation/: malicious.py  normal.py
tests/integration/: test_pipeline.py
tests/unit/: test_monitor.py  test_orchestrator.py  test_report.py  test_scenarios.py
