[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyber-ignition-agents"
version = "0.4.0"
description = "Environment-triggered autonomous cybersecurity agent framework — companion demo for The Ignition Problem"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "chromadb>=0.5.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
cyber-ignition = "cyber_ignition_agents.cli:demo_main"
cyber-ignition-monitor = "cyber_ignition_agents.cli:monitor_main"

[tool.hatch.build.targets.wheel]
packages = ["src/cyber_ignition_agents"]

[tool.pytest.ini_options]
markers = ["slow: requires ANTHROPIC_API_KEY and makes real LLM calls"]
testpaths = ["tests"]
